# SRBD-NMPC-Solver

./: CMakeLists.txt  NMPC_solver.cpp  NMPC_solver.h  README.md  hpllt.h  matplotlibcpp.h  mpc_option.yaml  stance_nmpc_example.cpp  stance_nmpc_example.h
config/: mpc_option.yaml
dynamic/: flow_dynamic.cpp  flow_dynamic.h  flow_tool.h
dynamics/: CMakeLists.txt  SRBD_model.cpp  SRBD_model.h  SRB_dynamics.cpp  SRB_dynamics.h  orientation_tool.h
hpipm-cpp/: CMakeLists.txt  LICENSE  README.md
hpipm-cpp/doc/: Doxyfile
hpipm-cpp/examples/: CMakeLists.txt  example_mpc.cpp  example_ocp_qp.cpp
hpipm-cpp/include/hpipm-cpp/: hpipm-cpp.hpp  ocp_qp.hpp  ocp_qp_dim.hpp  ocp_qp_ipm_solver.hpp  ocp_qp_ipm_solver_settings.hpp  ocp_qp_ipm_solver_statistics.hpp  ocp_qp_solution.hpp
hpipm-cpp/include/hpipm-cpp/detail/: d_ocp_qp_dim_wrapper.hpp  d_ocp_qp_ipm_arg_wrapper.hpp  d_ocp_qp_ipm_ws_wrapper.hpp  d_ocp_qp_sol_wrapper.hpp  d_ocp_qp_wrapper.hpp
hpipm-cpp/include/include/: blasfeo_target.h
hpipm-cpp/src/: ocp_qp_dim.cpp  ocp_qp_ipm_solver.cpp  ocp_qp_ipm_solver_settings.cpp  ocp_qp_ipm_solver_statistics.cpp
hpipm-cpp/src/detail/: d_ocp_qp_dim_wrapper.cpp  d_ocp_qp_ipm_arg_wrapper.cpp  d_ocp_qp_ipm_ws_wrapper.cpp  d_ocp_qp_sol_wrapper.cpp  d_ocp_qp_wrapper.cpp
hpipm-cpp/test/: CMakeLists.txt  d_ocp_qp_dim_wrapper.cpp  d_ocp_qp_ipm_arg_wrapper.cpp  d_ocp_qp_ipm_ws_wrapper.cpp  d_ocp_qp_sol_wrapper.cpp  d_ocp_qp_wrapper.cpp  gtest.cmake  ocp_qp_ipm_solver.cpp  osqp_gen.py  sol0.txt  sol1.txt  sol10.txt  sol11.txt  sol12.txt  sol13.txt  sol14.txt  sol2.txt  sol3.txt  sol4.txt  sol5.txt  sol6.txt  sol7.txt  sol8.txt  sol9.txt
utils/: cppTypes.h  timer.h
vscode/: launch.json
